Upgrade to alpha.13